# multi_camera_driver

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
cache/: debayer_4096x3000.pth
calibration/: genie_camera_bar.json  global_pair.json  global_pair_inverted.json  stereo_pair.json  stereo_pair2.json  stereo_pair_half.json
camera_sets/: conan_camera_bar.yaml  eth_bar.yaml  eth_camera_array.yaml  genie_camera_bar.yaml  spare_global.yaml
camera_settings/: calibration_pair.json  camera_12p.yaml  camera_array.yaml  camera_array_half.yaml  camera_bar.yaml  camera_pair.yaml  genie_camera_bar.yaml  global_12p.yaml  global_pair.yaml  global_pair_inverted.yaml  rolling_12p.yaml  spare_camera.yaml  spare_hdr16.yaml  stereo-imu.yaml  stereo_pair.yaml  stereo_pair2.yaml  stereo_pair2_half.yaml  stereo_pair_half.yaml  stereo_pair_inverted.yaml  uc_ur5_pair.yaml  uoa_pair.yaml
cfg/: CameraArray.cfg  CameraArraySettings.cfg  CameraIMUSettings.cfg
config/camera_sets/: genie_camera_bar.yaml  spare_global.yaml
config/camera_settings/: camera_12p.yaml  camera_12p_eth_sync.yaml
launch/: record.launch  reset_cameras.launch  reset_cameras.launch.py  start_array.launch  start_cameras.launch  start_cameras.launch.py  start_pair.launch  stereo_pair.launch  trigger_simulator.launch
msg/: CameraArrayStatus.msg  CameraStatus.msg
multi_camera_driver/: benchmark_processing.py  camera_array.py  reset_cameras.py
multi_camera_driver/helpers/: camera_node.py  camera_params.py  camera_set.py  camera_setters.py  common.py  config.py  diagnostics.py  external_trigger.py  geometry_conversions.py  image_handler.py  image_settings.py  lazy_publisher.py  monotonic_sync_handler.py  publisher.py  spinnaker_helpers.py  sync_handler.py  trigger_reporter.py  work_queue.py
multi_camera_driver/helpers/camera_geometry/: __init__.py  conversions.py  lazy_publisher.py
multi_camera_driver/helpers/image_processor/: __init__.py  frame_processor.py  outputs.py  util.py
multi_camera_driver/launch/: reset_cameras.py  start_cameras.py
nodes/: benchmark_processing.py  camera_array.py  camera_imu.py  camera_sync_tester.py  camera_trigger_simulator.py  capture_node.py  image_folder.py  ping_client.py  ping_server.py  rectify_node.py  reset_cameras.py  stereo_node.py
scripts/: capture_images.py
src/spinnaker_camera_driver_helpers/: camera_node.py  camera_set.py  camera_setters.py  common.py  config.py  diagnostics.py  firmware.py  image_handler.py  image_settings.py  monotonic_sync_handler.py  publisher.py  spinnaker_helpers.py  sync_handler.py  trigger_reporter.py  work_queue.py
src/spinnaker_camera_driver_helpers/image_processor/: __init__.py  camera_processor.py  common.py  frame_processor.py  hdr_jxl.py  mixed_gpu.py  opencv_nvjpeg.py  outputs.py  processor.py  torch_nvjpeg.py  turbo_jpeg.py  util.py
srv/: Capture.srv
