<?xml version="1.0"?>
<package format="2">
    <name>spinnaker_camera_driver_ros</name>
    <version>0.0.0</version>
    <description>The spinnaker_camera_driver_ros package</description>

    <maintainer email="sam.schofield@pg.canterbury.ac.nz">sds53</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>rospy</exec_depend>
    
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>python_disablegc</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
