<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_camera_driver</name>
  <version>0.0.0</version>
  <description>The spinnaker_camera_driver_ros package</description>
  <maintainer email="matthew.mattar@canterbury.ac.nz">mma484</maintainer>
  <license>BSD</license>

  <build_depend>python_disablegc</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
